# design-four-dimensional-matrix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_0.3.0.md  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: build.yml
__MACOSX/: ._LICENSE  ._RELEASE_NOTES_0.3.0.md  ._seebook
__MACOSX/apps/webview/: ._style.css
__MACOSX/seebook/: ._oa_3d_visualization.html  ._oa_visualization_report.html
__MACOSX/seebook/src/hypercube/core/: ._hypercube.py
__MACOSX/tt/: ._run_project_deep_analysis.js
agent/: main.py  ollama_client.py  prompts.py
apps/: server.js
apps/lib/: config.js  config.test.js  executor.js  executor.test.js  expertGate.js  expertGate.test.js  ollama.js  outcomeJudge.js  outcomeJudge.test.js  resultVerifier.js  resultVerifier.test.js  taskManager.js  taskManager.test.js  utils.js  utils.test.js
apps/stress/: stress.js
apps/webview/: index.html  main.js  style.css
cloudwbot/: hints.json
config/: databases.yaml  policy.yaml
four_dim_matrix/: __init__.py  cli.py  color_matrix.py  dashboard.py  data_matrix.py  db_adapter.py  demo.py  design_spec.py  dynamic_classifier.py  four_d_mapper.py  hypercube.py  key_discovery.py  knowledge_base.py  mvp_demo.py  normalization_pipeline.py  optimizer.py  quality.py  schema_analyzer.py  stream_comparator.py  temporal_discovery.py  visualizer.py  z_axis_encoding.py
four_dim_matrix/connectors/: base.py  mysql.py  postgres.py
four_dim_matrix/memory/: __init__.py  store.py
ollama_exec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
seebook/: .env.example  CHANGELOG.md  COMPLETION_REPORT.md  HANDOVER_CHECKLIST.md  HANDOVER_REPORT.md  OA_DB_ANALYSIS_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  oa_3d_visualization.html  oa_analysis_report.json  oa_business_exploration.json  oa_business_metadata.json  oa_business_report.html  oa_enhanced_hypercube.json  oa_enhanced_report.json  oa_hypercube.json  oa_visualization_report.html  pyproject.toml
seebook/docs/: ARCHITECTURE.md  CATEGORY_FIELD_ANALYSIS.md  DYNAMIC_CLASSIFICATION.md
seebook/examples/: README.md  analyze_oa_db.py  analyze_oa_enhanced.py  category_field_analysis_demo.py  complete_workflow_demo.py  demo_with_mock.py  two_stage_lineage_demo.py  unknown_database_demo.py
seebook/src/hypercube/: __init__.py  cli.py
seebook/src/hypercube/connectors/: mysql.py  postgres.py
seebook/src/hypercube/core/: ai_classifier.py  category_analyzer.py  changelog.py  color_matrix.py  data_matrix.py  dynamic_classifier.py  hypercube.py  lineage.py  llm_classifier.py  optimizer.py  quality.py  real_category_analyzer.py  relationship_extractor.py
seebook/src/hypercube/visualization/: dashboard.py
seebook/tests/: test_color_matrix.py  test_data_matrix.py
tasks/: example_spec.docx  example_spec.md  example_spec.yaml  example_task.yaml
tests/: test_agent_interactive.py  test_aggregation_layer.py  test_cli_bugs.py  test_color_mapping.py  test_color_matrix.py  test_dashboard.py  test_data_matrix.py  test_db_adapter.py  test_demo.py  test_design_spec.py  test_four_d_mapper.py  test_generate_fallback.py  test_knowledge.py  test_memory.py  test_multi_model.py  test_normalization_pipeline.py  test_orchestrate.py  test_schema_analyzer.py  test_seebook_integration.py  test_stream_comparator.py  test_temporal_discovery.py  test_ux_improvements.py  test_visualizer.py  test_wide_table_pipeline.py  test_z_axis_encoding.py
toolserver/: audit.py  config.py  dashboard.py  db.py  field_analyzer.py  files.py  policy.py  server.py  shell.py  visualizer.py  wide_table.py
tt/: README.md  run_project_deep_analysis.js
(+5 files in other folders)
