[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "four-dim-matrix"
version = "0.1.0"
description = "Four-dimensional matrix knowledge system: dual-matrix architecture for database-to-knowledge-base conversion"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
graph = [
    "networkx>=3.0",
    "python-louvain>=0.16",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
]
all = [
    "networkx>=3.0",
    "python-louvain>=0.16",
    "matplotlib>=3.5",
    "plotly>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["four_dim_matrix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
