[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "four-dim-matrix"
version = "0.2.0"
description = "Four-dimensional matrix knowledge system: dual-matrix architecture for database-to-knowledge-base conversion"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
graph = [
    "networkx>=3.0",
    "python-louvain>=0.16",
]
viz = [
    "matplotlib>=3.5",
    "plotly>=5.0",
]
# seebook 集成新增依赖
seebook = [
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "colorspacious>=1.1.2",
]
seebook-db = [
    "numpy>=1.24.0",
    "sqlalchemy>=2.0.0",
    "colorspacious>=1.1.2",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
]
seebook-viz = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "colorspacious>=1.1.2",
    "plotly>=5.15.0",
    "dash>=2.14.0",
]
all = [
    "networkx>=3.0",
    "python-louvain>=0.16",
    "matplotlib>=3.5",
    "plotly>=5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "colorspacious>=1.1.2",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "dash>=2.14.0",
]

[project.scripts]
four-dim-matrix = "four_dim_matrix.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["four_dim_matrix*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
