[project]
name = "db-hypercube"
version = "0.1.0"
description = "四维矩阵数据库可视化认知系统"
authors = [{name = "User", email = "user@example.com"}]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "clickhouse-connect>=0.6.0",
    "plotly>=5.15.0",
    "dash>=2.14.0",
    "dash-cytoscape>=0.3.0",
    "colorspacious>=1.1.2",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
